@@ -43,37 +43,37 @@ class amore_monoid {
     		/**
 		 * Returns the number of states of the unterlying DFA.
 		 */
-		virtual unsigned int get_highest_state();
+		virtual unsigned int get_highest_state() const;
 
     		/**
 		 * Returns the alphabet size (of the unterlying DFA).
 		 */
-		virtual unsigned int get_alphabet_size();
+		virtual unsigned int get_alphabet_size() const;
 
 		/**
 		 * Returns the number of elements of this monoid.
 		 */
-		virtual unsigned int get_element_count();
+		virtual unsigned int get_element_count() const;
 
 		/**
 		 * Returns the number of generators of this monoid.
 		 */
-		virtual unsigned int get_generator_count();
+		virtual unsigned int get_generator_count() const;
 
 		/**
 		 * Returns the zero element
 		 */
-		virtual unsigned int get_zero();
+		virtual unsigned int get_zero() const;
 
 		/**
 		 * Checks whether the syntactic monoid equals the syntactic semi-group.
 		 */
-		virtual bool mequals();
+		virtual bool mequals() const;
 
 		/**
 		 * Checks whether the D classes (Green's relation) are computed.
 		 */
-		virtual bool dclass_iscomputed();
+		virtual bool dclass_iscomputed() const;
 
 		/**
 		 * Computes the D classes (Green's relation).
@@ -83,7 +83,7 @@ class amore_monoid {
 		/**
 		 * Checks whether the defining relation is computed.
 		 */
-		virtual bool relation_iscomputed();
+		virtual bool relation_iscomputed() const;
 
 		/**
 		 * Computes the defining relation.
@@ -93,7 +93,7 @@ class amore_monoid {
 		/**
 		 * Multiplies the elements <code>a</code> and <code>b</code>.
 		 */
-		virtual unsigned int multiplicate(unsigned int, unsigned int);
+		virtual unsigned int multiplicate(unsigned int, unsigned int) const;
 
 		/**
 		 * Returns the (smallest?) representative of the given monoid's element as <code>char *</code>.
@@ -103,27 +103,47 @@ class amore_monoid {
 		 * @param with If true, the representative is preceeded by a * if it is an idempotent element.
 		 * @param zeroone If true, the representative of the 0 and 1 element not computed by 0 or 1 is returned.
 		 */
-		virtual char * get_representative(unsigned int no, bool with, bool zeroone);
+		virtual char * get_representative(unsigned int no, bool with, bool zeroone) const;
 
 		/**
 		 * Returns the (smallest?) representative of the given monoid's element.
 		 */
-		virtual std::list<int> get_representative(unsigned int);
+		virtual std::list<int> get_representative(unsigned int) const;
 
 		/**
 		 * Returns the multiplication table.
 		 */
-		virtual std::map<unsigned int, std::map<unsigned int, unsigned int> > get_table();
+		virtual std::map<unsigned int, std::map<unsigned int, unsigned int> > get_table() const;
 
 		/**
 		 * Check whether the given element is idempotent.
 		 */
-		virtual bool is_idempotent(unsigned int);
+		virtual bool is_idempotent(unsigned int) const;
+
+		/**
+		 * Check whether the language represented by this monoid is piecewise testable.
+		 */
+		virtual bool is_pwt() const;
+
+		/**
+		 * Check whether the language represented by this monoid has dot-depth one (or less).
+		 */
+		virtual bool is_dd1() const;
+
+		/**
+		 * Check whether the language represented by this monoid is starfree.
+		 */
+		virtual bool is_sf() const;
+
+		/**
+		 * Check whether the monoid is groupfree.
+		 */
+		virtual bool is_groupfree() const;
 
 		/**
 		 * Returns the AMoRE monoid structure encapsulated by this class.
 		 */
-		virtual monoid get_monoid();
+		virtual monoid get_monoid() const;
 };
 
 }; // end namespace amore
