@@ -13,9 +13,11 @@ HEAD (today)
 ------------
 
 - libAMoRE: Fixed memory leak in enfa2nfa.c
+- libAMoRE++: Added new class amore_monoids to capture AMoRE's monoid
+              functionality
 - libAMoRE++: Added function get_transitions that returs the transitions as they
               are stored in the AMoRE structs.
-- libAMoRE++: consider epsilon-transitions in finite_automaton::negative_sink()
+- libAMoRE++: Consider epsilon-transitions in finite_automaton::negative_sink()
               this fixes recognition of non-sink-states as sink-states in
               visualize().
 - libAMoRE++: Added copy constructur for NFA and DFA
